<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_one"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/smssdk_input_bg_focus"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_put_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="@color/white"
                    android:hint="@string/smssdk_write_userOrphonenum"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/smssdk_input_bg_focus"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_put_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="@color/white"
                    android:hint="@string/smssdk_write_pwd"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_icon"
            android:text="@string/smssdk_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_registered"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/login_button_icon"
            android:text="@string/smssdk_registered"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>